<resources>
    <string name="app_name">Algebra1 Buddy</string>
    <string name="hinttxt">Not case sensitive.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_downloadall">Download All</string>
    <string name="action_resetDL">Reset DL</string>
    <string name="action_Help">Help</string>
    <string name="help_string_1">If you want to display this screen again, simply click the 3 dots in the upper right-hand corner (if available), and press on "Help".\n\nTo access the settings menu, press on the 3 dots and select "Settings". In the settings menu, you will be given the option to reset the download information for any of the subjects. <b>The download information is information regarding whether or not a file has been downloaded and an alert dialog box will pop up whenever a previously downloaded file is going to be downloaded again. Resetting the download information for a file means that whether or not you have downloaded that specific file already will be forgotten, allowing you to re-download files with 1 click once again.\n</b></string>
    <string name="help_string_2">In the "Reset Options" part of the menu, you will be able to reset download data for an entire subject, saving you the time from manually going through each activity and resetting the download information. </string>
    <string name="help_string_3">Below the reset option is the download options, which allows you to choose whether or not you will only download files with a WiFi connection.</string>
    <string name="title_activity_test_activity">test activity</string>
    <string name="title_activity_algebra_1">Algebra 1</string>
    <string name="title_activity_algebra_1__equation__with__variables">Equation With Variables</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_algebra_1__variables">Variables</string>
    <string name="title_activity_algebra_1__pemdas">PEMDAS</string>
    <string name="alg1_EWZOIS"><b>Equations with Zero or Infinite Solutions</b>\n\nSo far, we’re addressed how to balance an equation in order to obtain a solution and resulting form obtained when it’s balanced. But sometimes, we won’t always get an equation in that form. Sometimes, we might get something ugly like <b>7 = 6</b> or <b>0 = 0</b>. When we obtain resultant forms like those, what does it mean?\n\nWhen we end up with an equation where we have one number on one side and a different other on the other side, this tells us the equation has no solutions.\n4x + 2x + 7 = 6x + 8\nNo matter what is being plugged in as x, the left side of the equation will never equal to the right side of the equation. If we plug in 0, we get 7 = 8. If we plug in 50, we get 307 = 308. Regardless of the number being plugged in, the right side will always have 1 more than the left side. We can observe this by removing 6x from each side:\n4x + 2x + 7 = 6x + 8\n6x+ 7 = 6x + 8\n<b>7 = 8</b>\nAs you can see, when we simplify the equation, we end up with two unequal numbers on both sides. The side with the larger number will always be bigger than the side with the smallest number by their different; because one side will always be larger than the other, there will never be a solution.\n\nWhen we end up with an equation where we have a simplified result of 0 = 0, this tells us that the equation has infinite solutions. What this tells us is that both sides of the equation are exactly the same; whatever value is on one side is mirrored on the next, so any number that can be plugged in is a valid solution.\nExample:\n4x + 8 = 4x + 6 + 2\nIf we simply the equation:\n4x + 8 = 4x + 6 + 2\n4x + 8 = 4x + 8\nAs we can see, both sides mirror each other perfectly. If we were to subtract 4x from each side, and then 8 our final equation is:\n<b>0 = 0</b></string>
    <string name="alg1_inequalities"><b>Inequalities</b>\n\nAn inequality is an equation where instead of an equal sign, we have either a:\n-Less than sign (&lt;)\n-Greater than sign (&gt;)\n-Less than or equal to sign (<u>&lt;</u>)\n-Greater than or equal to sign (<u>&gt;</u>)\n\nHow do we interpret each sign?\n\n- &lt; means the left hand side must always be less than the right hand side\n- &gt; means the left hand side must always be more than the right hand side\n- <u>&lt;</u> means the left side must always be less than or equal to the right hand side\n- <u>%gt;</u> means the left side must always be greater than or equal to the right hand side\n\nAn inequality reads exactly like a normal equation, except instead of saying “equals”, we say the corresponding sign.\nExamples:\n<b>2x <u>&lt;</u> 4: 2x is less than or equal to 4\n5x &lt; 6: 5x is less than 6\n4x + 2 <u>&gt;</u> 9: 4x + 2 is greater than or equal to 9\n3x – 2 &gt; 4: 3x – 2 is greater than 4</b>\n\nInequalities can be balanced/simplified exactly like a normal equation, except for 1 twist: if we multiply or divide by a negative number, the sign must be flipped. This means that the greater than sign becomes less than, and vice-versa. In addition, the greater than or equal to sign becomes a less than or equal to sign, and vice-versa.\n\nExample:\n-3y &gt; 15\nLet’s say we only want y on the left side with no -3. Naturally we divide both sides by -3, and we will end up with:\n<b>y <u>&lt;</u> -5</b>\nIf we didn’t invert the sign, would the answer still be correct? Let’s check.\nWe would have <b>y &gt; -5</b> instead. If we plug -5 into the above equal and the original equation, we get -5 &gt; -5 and -15 &gt; -15 respectively, so it seems to be correct as of right now.\nBut what if we plug in y = -7, which is a solution to the original equation? (If we plug in -7 into the original equation, we obtain: 21 <u>&gt;</u> 15, which is valid)\nPlugging -7 into y > -5, we get -7 &gt; -5, which is not a correct statement.\n\nLike equations, you can swap the left side and the right side, but you have to reverse the inequality sign as well.\nSimple example: 5 &gt; x can also be expressed as x &gt; 5\n\nFrequently in the topic of inequalities, you will be asked to plot an inequality on a number line. Although doing this is tedious, it may help you obtain a better visualization on imagining and thinking about inequalities.\n\nThe first thing part of an inequality that should be observed when you begin plotting it onto a number line if the inequality sign allows both sides to be each to each other or not. If the inequality includes equal to, we will have a closed dot (dot that’s bubbled in). Else, we will have an open dot (dot that is not bubbled in)./n/nThe next part that should be notice is the side that only has a number on it (after we have balanced and simplified the inequality). This number will tell us exactly where to place our dot to signify the boundary of the inequality on the number line. A closed dot signifies that we include the boundary number, while an open dot signifies that we do not.\n\nExamples:\nApplying the above 2 steps to the inequality x > 5, we have:</string>
    <string name="title_activity_havingtrouble">Getting Answers</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_algebra_1__system__of__equations">System Of Equations</string>
    <string name="title_activity_algebra_1__balancing__equations">Balancing Equations</string>
    <string name="title_activity_search">Search Results</string>
    <string name="title_activity_algebra_1__leawp">Linear Equations &amp; Word Problems</string>
    <string name="title_activity_algebra_1__ewzois">Equations with 0 or Infinite Solutions</string>
    <string name="title_activity_algebra1__inequalities">Inequalities</string>
</resources>