<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="jonathanchiou.educate.Algebra1_Lessons.Algebra_1">

    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_Help"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_downloadall"
        android:title="@string/action_downloadall"
        android:orderInCategory="300"
        app:showAsAction="never" />

</menu>
